feat: allow secure API secret copy
